force-app/main/default/objects/Book__c/fields/Book_Id__c.field-meta.xml
<CustomField>
    <fullName>Book_Id__c</fullName>
    <displayFormat>Book-{000}</displayFormat>
    <externalId>true</externalId>
    <label>Book Id</label>
    <type>AutoNumber</type>
</CustomField>