force-app/main/default/objects/Book__c/fields/Genre__c.field-meta.xml
<CustomField>
    <fullName>Genre__c</fullName>
    <label>Genre</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>mathematics</fullName>
            </value>
            <value>
                <fullName>economics</fullName>
            </value>
            <value>
                <fullName>history</fullName>
            </value>
            <value>
                <fullName>science</fullName>
            </value>
            <value>
                <fullName>data_science</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>