force-app/main/default/objects/Book__c/listViews/DetailList.listView-meta.xml
<ListView>
    <fullName>DetailList</fullName>
    <columns>NAME</columns>
    <columns>Author__c</columns>
    <columns>Publication__c</columns>
    <columns>Quantity__c</columns>
    <filterScope>Mine</filterScope>
    <label>DetailList</label>
</ListView>